docs/api/qiskit/0.19/tools_jupyter.mdx
---
title: jupyter (v0.19)
description: API reference for qiskit.tools.jupyter in qiskit v0.19
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.tools.jupyter
---

<span id="module-qiskit.tools.jupyter" />

<span id="qiskit-tools-jupyter" />

<span id="jupyter-tools-qiskit-tools-jupyter" />

# Jupyter Tools

`qiskit.tools.jupyter`

A Collection of Jupyter magic functions and tools that extend the functionality of Qiskit.

## Overview of all available backends

```python
from qiskit import IBMQ
import qiskit.tools.jupyter
%matplotlib inline

IBMQ.load_account()

%qiskit_backend_overview
```

## Detailed information on a single backend

```python
from qiskit import IBMQ
import qiskit.tools.jupyter
%matplotlib inline

IBMQ.load_account()
provider = IBMQ.get_provider(hub='ibm-q')
backend = provider.get_backend('ibmq_vigo')
backend
```

## Load Qiskit Job Watcher

```python
import qiskit.tools.jupyter
%qiskit_job_watcher
```

## HTMLProgressBar

```python
import numpy as np
from qiskit.tools.parallel import parallel_map
import qiskit.tools.jupyter

%qiskit_progress_bar
parallel_map(np.sin, np.linspace(0,10,100));
```

## Qiskit version table

```python
import qiskit.tools.jupyter
%qiskit_version_table
```

### Version Information

| Qiskit Software              | Version                                             |
| ---------------------------- | --------------------------------------------------- |
| Qiskit                       | 0.19.6                                              |
| Terra                        | 0.14.2                                              |
| Aer                          | 0.5.2                                               |
| Ignis                        | 0.3.3                                               |
| Aqua                         | 0.7.3                                               |
| IBM Q Provider               | 0.7.2                                               |
| System information           |                                                     |
| Python                       | 3.7.7 (default, Apr 22 2020, 19:15:10) \[GCC 9.3.0] |
| OS                           | Linux                                               |
| CPUs                         | 32                                                  |
| Memory (Gb)                  | 125.65557479858398                                  |
| Fri Aug 13 09:02:26 2021 EDT |                                                     |

## Qiskit copyright

```python
import qiskit.tools.jupyter
%qiskit_copyright
```

### This code is a part of Qiskit

© Copyright IBM 2017, 2021.

This code is licensed under the Apache License, Version 2.0. You mayobtain a copy of this license in the LICENSE.txt file in the root directoryof this source tree or at [http://www.apache.org/licenses/LICENSE-2.0](http://www.apache.org/licenses/LICENSE-2.0).

Any modifications or derivative works of this code must retain thiscopyright notice, and modified files need to carry a notice indicatingthat they have been altered from the originals.

